--- a/receiver/sqlqueryreceiver/metadata.yaml
+++ b/receiver/sqlqueryreceiver/metadata.yaml
@@ -7,7 +7,7 @@ status:
     development: [logs]
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
-    active: [dmitryax]
+    active: [dmitryax, crobert-1]
     emeritus: [pmcollins]
 
 tests:
