[extension/httpforwarder] rename httpforwarder to httpforwarderextension (#30981)
**Description:**
Deprecate the httpforwarder extension
Introduce the httpforwarderextension extension.

**Link to tracking Issue:**
Relates to #24171

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -95,6 +95,7 @@ body:
       - extension/headerssetter
       - extension/healthcheck
       - extension/httpforwarder
+      - extension/httpforwarder
       - extension/jaegerremotesampling
       - extension/oauth2clientauth
       - extension/observer
