[chore] add cparkins to azureeventhubreceiver (#31308)
**Description:**
Add @cparkins to codeowners of azure event hub receiver.
**Link to tracking Issue:**
Fixes #31269

--- a/receiver/azureeventhubreceiver/metadata.yaml
+++ b/receiver/azureeventhubreceiver/metadata.yaml
@@ -6,7 +6,7 @@ status:
     alpha: [metrics, logs]
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
-    active: [atoulme, djaglowski]
+    active: [atoulme, djaglowski, cparkins]
 
 tests:
   config:
