--- a/receiver/syslogreceiver/metadata.yaml
+++ b/receiver/syslogreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
     active: [djaglowski]
+    seeking_new: true
 
 tests:
   config:
