[chore] k8sobjects receiver lifecycle generated tests (#31465)
Relates to #27849

--- a/receiver/k8sobjectsreceiver/metadata.yaml
+++ b/receiver/k8sobjectsreceiver/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib, splunk, sumo]
   codeowners:
     active: [dmitryax, hvaghani221, TylerHelmuth]
+
+tests:
+  config:
+  skip_lifecycle: true
