--- a/receiver/sqlserverreceiver/metadata.yaml
+++ b/receiver/sqlserverreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [djaglowski, StefanKurek]
+  unsupported_platforms: [darwin, linux]
 
 resource_attributes:
   sqlserver.database.name:
@@ -155,3 +156,6 @@ metrics:
     unit: "{transactions}/s"
     gauge:
       value_type: double
+
+tests:
+  config:
