[chore] kubeletstats receiver lifecycle generated tests (#31463)
Relates to #27849

--- a/receiver/kubeletstatsreceiver/metadata.yaml
+++ b/receiver/kubeletstatsreceiver/metadata.yaml
@@ -499,3 +499,9 @@ metrics:
     gauge:
       value_type: int
     attributes: []
+
+tests:
+  config:
+    ca_file: "testdata/testcert.crt"
+    key_file: "testdata/testkey.key"
+    cert_file: "testdata/testcert.crt"
