--- a/receiver/datadogreceiver/metadata.yaml
+++ b/receiver/datadogreceiver/metadata.yaml
@@ -7,3 +7,6 @@ status:
   distributions: [contrib, sumo]
   codeowners:
     active: [boostchicken, gouthamve, jpkrohling, MovieStoreGuy]
+
+tests:
+  config:
