--- a/receiver/iisreceiver/metadata.yaml
+++ b/receiver/iisreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [Mrod1598, djaglowski]
+  unsupported_platforms: [linux, darwin]
 
 resource_attributes:
   iis.site:
@@ -133,3 +134,6 @@ metrics:
     gauge:
       value_type: int
     enabled: true
+
+tests:
+  config:
