--- a/receiver/activedirectorydsreceiver/metadata.yaml
+++ b/receiver/activedirectorydsreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [djaglowski, BinaryFissionGames]
+  unsupported_platforms: [darwin, linux]
 
 attributes:
   direction:
@@ -208,3 +209,6 @@ metrics:
       aggregation_temporality: cumulative
       value_type: double
     enabled: true
+
+tests:
+  config:
