[chore] filelog receiver lifecycle generated tests (#31466)
Relates to #27849

--- a/receiver/filelogreceiver/metadata.yaml
+++ b/receiver/filelogreceiver/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
     active: [djaglowski]
+
+tests:
+  config:
+    include: [ testdata/simple.log ]
