[chore] windowseventlog receiver lifecycle generated tests (#31469)
Relates to #27849

--- a/receiver/windowseventlogreceiver/metadata.yaml
+++ b/receiver/windowseventlogreceiver/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
     active: [djaglowski, armstrmi, pjanotti]
+  unsupported_platforms: [darwin, linux]
+
+tests:
+  config:
