--- a/receiver/windowsperfcountersreceiver/metadata.yaml
+++ b/receiver/windowsperfcountersreceiver/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
     active: [dashpole]
+  unsupported_platforms: [darwin, linux]
+
+tests:
+  config:
