[chore] mongodbatlas receiver lifecycle generated tests (#31472)
Relates to #27849

--- a/receiver/mongodbatlasreceiver/metadata.yaml
+++ b/receiver/mongodbatlasreceiver/metadata.yaml
@@ -728,3 +728,8 @@ metrics:
     attributes: [cpu_state]
     gauge:
       value_type: double
+
+tests:
+  config:
+    alerts:
+      enabled: true
