[chore] namedpipe receiver lifecycle generated tests (#31468)
Relates to #27849

Co-authored-by: Daniel Jaglowski <jaglows3@gmail.com>

--- a/receiver/namedpipereceiver/metadata.yaml
+++ b/receiver/namedpipereceiver/metadata.yaml
@@ -7,3 +7,9 @@ status:
   distributions: [contrib]
   codeowners:
     active: [djaglowski]
+  unsupported_platforms: [windows, darwin]
+
+tests:
+  config:
+    path: /tmp/pipe
+    mode: 0600
