[chore] Add seeking new codeowners note on several components (#31484)
This PR makes use of the "seeking new codeowners" flag which was
recently added to mdatagen. It sets the flag for several components of
which I am the/an owner but often find myself wishing for more help.

I've also taken the liberty of adding the flag to the spanmetrics
connector, which I have been involved in previously but do not have time
to officially support. @portertech volunteered to help and then quickly
become the sole code owner due to another stepping away, so I am
presuming more help would be welcome.

--- a/receiver/rabbitmqreceiver/metadata.yaml
+++ b/receiver/rabbitmqreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [djaglowski, cpheps]
+    seeking_new: true
 
 resource_attributes:
   rabbitmq.queue.name:
