--- a/receiver/awscloudwatchreceiver/metadata.yaml
+++ b/receiver/awscloudwatchreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [djaglowski, schmikei]
+    seeking_new: true
 
 tests:
   config:
