--- a/receiver/cloudflarereceiver/metadata.yaml
+++ b/receiver/cloudflarereceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [dehaansa, djaglowski]
+    seeking_new: true
 
 tests:
   config:
