--- a/receiver/couchdbreceiver/metadata.yaml
+++ b/receiver/couchdbreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib,observiq, sumo]
   codeowners:
     active: [djaglowski]
+    seeking_new: true
 
 resource_attributes:
   couchdb.node.name:
