--- a/receiver/elasticsearchreceiver/metadata.yaml
+++ b/receiver/elasticsearchreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [djaglowski, BinaryFissionGames]
+    seeking_new: true
 
 resource_attributes:
   elasticsearch.cluster.name:
