--- a/receiver/iisreceiver/metadata.yaml
+++ b/receiver/iisreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [Mrod1598, djaglowski]
+    seeking_new: true
   unsupported_platforms: [linux, darwin]
 
 resource_attributes:
