--- a/receiver/memcachedreceiver/metadata.yaml
+++ b/receiver/memcachedreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [djaglowski]
+    seeking_new: true
 
 attributes:
   command:
