[chore] jmx receiver lifecycle generated tests (#31474)
Relates to #27849

--- a/receiver/jmxreceiver/metadata.yaml
+++ b/receiver/jmxreceiver/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
     active: [rmfitzpatrick]
+
+tests:
+  config:
+    endpoint: myendpoint:12345
