--- a/receiver/dockerstatsreceiver/metadata.yaml
+++ b/receiver/dockerstatsreceiver/metadata.yaml
@@ -7,6 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [rmfitzpatrick, jamesmoessis]
+  unsupported_platforms: [darwin, windows]
 
 sem_conv_version: 1.6.1
 
