[chore] move awskinesis exporter to generated lifecycle tests (#30512)
Relates to #27849

---------

Co-authored-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/exporter/awskinesisexporter/metadata.yaml
+++ b/exporter/awskinesisexporter/metadata.yaml
@@ -7,3 +7,8 @@ status:
   distributions: [contrib, observiq]
   codeowners:
     active: [Aneurysm9, MovieStoreGuy]
+
+tests:
+  config:
+  skip_lifecycle: true
+
