--- a/exporter/fileexporter/metadata.yaml
+++ b/exporter/fileexporter/metadata.yaml
@@ -7,3 +7,8 @@ status:
   distributions: [core, contrib, observiq, splunk, sumo, aws]
   codeowners:
     active: [atingchen]
+
+tests:
+  config:
+    path: testdata/log.json
+  expect_consumer_error: true
