[chore] [cmd/mdatagen] Move sample-metadata.yaml to a separate package (#31503)
Create a separate internal sample receiver to generate and validate code
with mdatagen, including lifecycle tests.

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -21,6 +21,7 @@ body:
       - cmd/configschema
       - cmd/githubgen
       - cmd/mdatagen
+      - cmd/mdatagen/internal/samplereceiver
       - cmd/opampsupervisor
       - cmd/otelcontribcol
       - cmd/oteltestbedcol
