--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -15,6 +15,7 @@ body:
       - cmd/configschema
       - cmd/githubgen
       - cmd/mdatagen
+      - cmd/mdatagen/internal/samplereceiver
       - cmd/opampsupervisor
       - cmd/otelcontribcol
       - cmd/oteltestbedcol
