[chore] move carbon exporter to generated lifecycle tests (#30516)
Relates to
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27849

---------

Co-authored-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/exporter/carbonexporter/metadata.yaml
+++ b/exporter/carbonexporter/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [aboguszewski-sumo]
+
+tests:
+  config:
+  expect_consumer_error: true
