--- a/processor/resourcedetectionprocessor/metadata.yaml
+++ b/processor/resourcedetectionprocessor/metadata.yaml
@@ -4,7 +4,7 @@ status:
   class: processor
   stability:
     beta: [traces, metrics, logs]
-  distributions: [contrib, splunk, observiq, sumo, aws, redhat, liatrio]
+  distributions: [contrib, splunk, observiq, sumo, aws, redhat, liatrio, grafana]
   codeowners:
     active: [Aneurysm9, dashpole]
 
