--- a/receiver/namedpipereceiver/metadata.yaml
+++ b/receiver/namedpipereceiver/metadata.yaml
@@ -6,7 +6,7 @@ status:
     alpha: [logs]
   distributions: [contrib]
   codeowners:
-    active: [djaglowski]
+    active: [sinkingpoint, djaglowski]
   unsupported_platforms: [windows, darwin]
 
 tests:
