[chore] group build-tools packages (#31691)
Signed-off-by: Alex Boten <223565+codeboten@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -69,6 +69,11 @@
       },
       {
         "matchManagers": ["gomod"],
+        "matchSourceUrlPrefixes": ["https://go.opentelemetry.io/build-tools"],
+        "groupName": "All go.opentelemetry.io/build-tools packages"
+      },
+      {
+        "matchManagers": ["gomod"],
         "matchSourceUrlPrefixes": ["https://github.com/googlecloudplatform"],
         "groupName": "All github.com/googlecloudplatform packages"
       },
