[processor/k8sattributes] Fixes running with role/rolebinding (#31673)
**Description:** 
This PR allows running the k8sattributes processor with a k8s
role/rolebinding. This can be useful for k8s users w/o access to create
clusterroles and want to enrich pods' telemetry within the scope of a
namespace only. The PR also adds more comprehensive e2e tests including
tests for different RBAC use cases to ensure any changes going forward
do not introduce RBAC incompatibility.

**Link to tracking Issue:**
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/14742

**Testing:**
Added e2e tests

**Documentation:** <Describe the documentation added.>
Updated README

--- a/processor/k8sattributesprocessor/testdata/e2e/mixrbac/collector/deployment.yaml
+++ b/processor/k8sattributesprocessor/testdata/e2e/mixrbac/collector/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Name }}
-  namespace: default
+  namespace: e2ek8sattribute-mixrbac
 spec:
   replicas: 1
   selector:
