--- a/processor/k8sattributesprocessor/testdata/e2e/namespacedrbac/collector/role.yaml
+++ b/processor/k8sattributesprocessor/testdata/e2e/namespacedrbac/collector/role.yaml
@@ -1,10 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
   name: {{ .Name }}
+  namespace: e2ek8sattribute-namespacedrbac
 rules:
   - apiGroups: [""]
-    resources: ["pods", "namespaces", "nodes"]
+    resources: ["pods"]
     verbs: ["get", "watch", "list"]
   - apiGroups: ["apps"]
     resources: ["replicasets"]
