--- a/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/collector/service.yaml
+++ b/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/collector/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Name }}
-  namespace: default
+  namespace: e2ek8sattribute-clusterrbac
 spec:
   type: ClusterIP
   ports:
