--- a/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/telemetrygen/daemonset.yaml
+++ b/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/telemetrygen/daemonset.yaml
@@ -1,30 +1,28 @@
 apiVersion: apps/v1
-kind: StatefulSet
-metadata: 
-  name: {{ .Name }}-{{ .DataType }}-statefulset
-  namespace: default
+kind: DaemonSet
+metadata:
+  name: {{ .Name }}-{{ .DataType }}-daemonset
+  namespace: e2ek8sattribute-clusterrbac
 spec:
-  serviceName: {{ .Name }}-{{ .DataType }}-statefulset
-  replicas: 1
   selector:
     matchLabels:
-      app: {{ .Name }}-{{ .DataType }}-statefulset
+      app: {{ .Name }}-{{ .DataType }}-daemonset
   template:
     metadata:
       annotations:
-        workload: statefulset
+        workload: daemonset
       labels:
-        app: {{ .Name }}-{{ .DataType }}-statefulset
+        app: {{ .Name }}-{{ .DataType }}-daemonset
     spec:
       containers:
       - command:
         - /telemetrygen
-        - {{ .DataType }}
+        - {{ .DataType  }}
         - --otlp-insecure
         - --otlp-endpoint={{ .OTLPEndpoint }}
         - --duration=36000s
         - --rate=1
-        - --otlp-attributes=service.name="test-{{ .DataType }}-statefulset"
+        - --otlp-attributes=service.name="test-{{ .DataType }}-daemonset"
         - --otlp-attributes=k8s.container.name="telemetrygen"
 {{- if eq .DataType "traces" }}
         - --status-code=
