--- a/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/telemetrygen/deployment.yaml
+++ b/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/telemetrygen/deployment.yaml
@@ -1,15 +1,19 @@
-apiVersion: batch/v1
-kind: Job
-metadata:
-  name: {{ .Name }}-{{ .DataType}}-job
-  namespace: default
+apiVersion: apps/v1
+kind: Deployment
+metadata: 
+  name: {{ .Name }}-{{ .DataType }}-deployment
+  namespace: e2ek8sattribute-clusterrbac
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: {{ .Name }}-{{ .DataType }}-deployment
   template:
     metadata:
       annotations:
-        workload: job
+        workload: deployment
       labels:
-        app: {{ .Name }}-{{ .DataType }}-job
+        app: {{ .Name }}-{{ .DataType }}-deployment
     spec:
       containers:
       - command:
@@ -17,13 +21,14 @@ spec:
         - {{ .DataType }}
         - --otlp-insecure
         - --otlp-endpoint={{ .OTLPEndpoint }}
-        - --rate=1
         - --duration=36000s
-        - --otlp-attributes=service.name="test-{{ .DataType }}-job"
+        - --rate=1
+        - --otlp-attributes=service.name="test-{{ .DataType }}-deployment"
         - --otlp-attributes=k8s.container.name="telemetrygen"
 {{- if eq .DataType "traces" }}
         - --status-code=
 {{- end }}
         image: ghcr.io/open-telemetry/opentelemetry-collector-contrib/telemetrygen:latest
+        imagePullPolicy: IfNotPresent
         name: telemetrygen
-      restartPolicy: OnFailure
+      restartPolicy: Always
