--- a/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/telemetrygen/job.yaml
+++ b/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/telemetrygen/job.yaml
@@ -1,19 +1,15 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata: 
-  name: {{ .Name }}-{{ .DataType }}-deployment
-  namespace: default
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: {{ .Name }}-{{ .DataType}}-job
+  namespace: e2ek8sattribute-clusterrbac
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: {{ .Name }}-{{ .DataType }}-deployment
   template:
     metadata:
       annotations:
-        workload: deployment
+        workload: job
       labels:
-        app: {{ .Name }}-{{ .DataType }}-deployment
+        app: {{ .Name }}-{{ .DataType }}-job
     spec:
       containers:
       - command:
@@ -21,14 +17,13 @@ spec:
         - {{ .DataType }}
         - --otlp-insecure
         - --otlp-endpoint={{ .OTLPEndpoint }}
-        - --duration=36000s
         - --rate=1
-        - --otlp-attributes=service.name="test-{{ .DataType }}-deployment"
+        - --duration=36000s
+        - --otlp-attributes=service.name="test-{{ .DataType }}-job"
         - --otlp-attributes=k8s.container.name="telemetrygen"
 {{- if eq .DataType "traces" }}
         - --status-code=
 {{- end }}
         image: ghcr.io/open-telemetry/opentelemetry-collector-contrib/telemetrygen:latest
-        imagePullPolicy: IfNotPresent
         name: telemetrygen
-      restartPolicy: Always
+      restartPolicy: OnFailure
