--- a/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/telemetrygen/statefulset.yaml
+++ b/processor/k8sattributesprocessor/testdata/e2e/clusterrbac/telemetrygen/statefulset.yaml
@@ -1,28 +1,30 @@
 apiVersion: apps/v1
-kind: DaemonSet
-metadata:
-  name: {{ .Name }}-{{ .DataType }}-daemonset
-  namespace: default
+kind: StatefulSet
+metadata: 
+  name: {{ .Name }}-{{ .DataType }}-statefulset
+  namespace: e2ek8sattribute-clusterrbac
 spec:
+  serviceName: {{ .Name }}-{{ .DataType }}-statefulset
+  replicas: 1
   selector:
     matchLabels:
-      app: {{ .Name }}-{{ .DataType }}-daemonset
+      app: {{ .Name }}-{{ .DataType }}-statefulset
   template:
     metadata:
       annotations:
-        workload: daemonset
+        workload: statefulset
       labels:
-        app: {{ .Name }}-{{ .DataType }}-daemonset
+        app: {{ .Name }}-{{ .DataType }}-statefulset
     spec:
       containers:
       - command:
         - /telemetrygen
-        - {{ .DataType  }}
+        - {{ .DataType }}
         - --otlp-insecure
         - --otlp-endpoint={{ .OTLPEndpoint }}
         - --duration=36000s
         - --rate=1
-        - --otlp-attributes=service.name="test-{{ .DataType }}-daemonset"
+        - --otlp-attributes=service.name="test-{{ .DataType }}-statefulset"
         - --otlp-attributes=k8s.container.name="telemetrygen"
 {{- if eq .DataType "traces" }}
         - --status-code=
