--- a/processor/k8sattributesprocessor/testdata/e2e/mixrbac/collector/configmap.yaml
+++ b/processor/k8sattributesprocessor/testdata/e2e/mixrbac/collector/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Name }}-config
-  namespace: default
+  namespace: e2ek8sattribute-mixrbac
 data:
   relay: |
     exporters:
@@ -14,6 +14,8 @@ data:
       health_check: {}
     processors:
       k8sattributes:
+        filter:
+          namespace: e2ek8sattribute-workloadns
         extract:
           annotations:
           - from: pod
@@ -25,6 +27,8 @@ data:
             tag_name: k8s.labels.app
           - from: node
             key: foo
+          - from: namespace
+            key: foons
           metadata:
           - k8s.pod.name
           - k8s.pod.start_time
@@ -34,18 +38,11 @@ data:
           - k8s.deployment.uid
           - k8s.replicaset.name
           - k8s.replicaset.uid
-          - k8s.statefulset.name
-          - k8s.statefulset.uid
-          - k8s.daemonset.name
-          - k8s.daemonset.uid
-          - k8s.cronjob.name
-          - k8s.job.name
-          - k8s.job.uid
           - k8s.node.name
-          - k8s.cluster.uid
           - container.id
           - container.image.name
           - container.image.tag
+          - k8s.cluster.uid
         pod_association:
         - sources:
           - from: connection
@@ -58,13 +55,6 @@ data:
       extensions:
       - health_check
       pipelines:
-        logs:
-          exporters:
-          - otlp
-          processors:
-          - k8sattributes
-          receivers:
-          - otlp
         metrics:
           exporters:
           - otlp
@@ -73,6 +63,13 @@ data:
           receivers:
           - otlp
         traces:
+          exporters:
+          - otlp
+          processors:
+          - k8sattributes
+          receivers:
+          - otlp
+        logs:
           exporters:
           - otlp
           processors:
