--- a/receiver/k8sclusterreceiver/metadata.yaml
+++ b/receiver/k8sclusterreceiver/metadata.yaml
@@ -193,6 +193,11 @@ resource_attributes:
     type: string
     enabled: true
 
+  k8s.container.status.last_terminated_reason:
+    description: Last terminated reason of a container.
+    type: string
+    enabled: false
+
 attributes:
   k8s.namespace.name:
     description: The k8s namespace name.
