[chore] enable journaldreceiver lifecycle tests (#31754)
Relates to #27849

--- a/receiver/journaldreceiver/metadata.yaml
+++ b/receiver/journaldreceiver/metadata.yaml
@@ -8,8 +8,5 @@ status:
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
     active: [sumo-drosiek, djaglowski]
+  unsupported_platforms: [darwin, windows]
 
-# TODO: Update the receiver to pass the tests
-tests:
-  skip_lifecycle: true
-  skip_shutdown: true
