--- a/exporter/kafkaexporter/metadata.yaml
+++ b/exporter/kafkaexporter/metadata.yaml
@@ -9,7 +9,6 @@ status:
   codeowners:
     active: [pavolloffay, MovieStoreGuy]
 
-# TODO: Update the exporter to pass the tests
 tests:
+  config:
   skip_lifecycle: true
-  skip_shutdown: true
