--- a/extension/sumologicextension/metadata.yaml
+++ b/extension/sumologicextension/metadata.yaml
@@ -4,7 +4,7 @@ scope_name: otelcol/sumologic
 status:
   class: extension
   stability:
-    development: [extension]
+    alpha: [extension]
   distributions: [sumo]
   codeowners:
     active: [astencel-sumo, sumo-drosiek, swiatekm-sumo]
