Promote the OpAMP extension to alpha stability (#31616)

--- a/reports/distributions/contrib.yaml
+++ b/reports/distributions/contrib.yaml
@@ -70,6 +70,7 @@ components:
         - k8s_observer
         - oauth2client
         - oidc
+        - opamp
         - pprof
         - sigv4auth
     processor:
