feat(dockerstats): add online cpu and memory failcnt metrics (#31481)
**Description:** two new metrics have been added, they were already
being scraped but not emitted

**Link to tracking Issue:** #31366

**Testing:** added new metrics to `TestScrapeV2` 

**Documentation:** generated by mdatagen

--- a/receiver/dockerstatsreceiver/metadata.yaml
+++ b/receiver/dockerstatsreceiver/metadata.yaml
@@ -152,6 +152,12 @@ metrics:
     unit: "1"
     gauge:
       value_type: int
+  container.cpu.logical.count:
+    enabled: false
+    description: "Number of cores available to the container."
+    unit: "{cpus}"
+    gauge:
+      value_type: int
 
 
   # Memory
@@ -465,6 +471,14 @@ metrics:
       value_type: int
       aggregation_temporality: cumulative
       monotonic: false
+  container.memory.fails:
+    enabled: false
+    description: "Number of times the memory limit was hit."
+    unit: "{fails}"
+    sum:
+      value_type: int
+      aggregation_temporality: cumulative
+      monotonic: true
 
 
   # BlockIO (cgroup v1) and IO (cgroup v2) controllers
