[connector/grafanacloud] add new connector component (#31726)
**Description:**
This adds a new connector for generating metrics from traces for use in
Grafana Cloud.

**Link to tracking Issue:**
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/31647

**Testing:** unit testing

**Documentation:** README.md with example configuration.

---------

Signed-off-by: Robbie Lankford <robert.lankford@grafana.com>
Co-authored-by: Curtis Robert <crobert@splunk.com>
Co-authored-by: Juraci Paixão Kröhling <juraci.github@kroehling.de>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -29,6 +29,7 @@ connector/countconnector/                                @open-telemetry/collect
 connector/datadogconnector/                              @open-telemetry/collector-contrib-approvers @mx-psi @dineshg13
 connector/exceptionsconnector/                           @open-telemetry/collector-contrib-approvers @jpkrohling @marctc
 connector/failoverconnector/                             @open-telemetry/collector-contrib-approvers @akats7 @djaglowski @fatsheep9146
+connector/grafanacloudconnector/                         @open-telemetry/collector-contrib-approvers @jpkrohling @rlankfo @jcreixell
 connector/routingconnector/                              @open-telemetry/collector-contrib-approvers @jpkrohling @mwear
 connector/servicegraphconnector/                         @open-telemetry/collector-contrib-approvers @jpkrohling @mapno
 connector/spanmetricsconnector/                          @open-telemetry/collector-contrib-approvers @portertech
