--- a/reports/distributions/grafana.yaml
+++ b/reports/distributions/grafana.yaml
@@ -3,6 +3,7 @@ url: https://github.com/grafana/agent
 maintainers: []
 components:
     connector:
+        - grafanacloud
         - servicegraph
         - spanmetrics
     exporter:
