[extension/googleclientauth] Add new component boilerplate scaffolding (#31518)
**Description:**
This adds the basic component boilerplate following the recommendations
for PR1 in
https://github.com/open-telemetry/opentelemetry-collector-contrib/blob/main/CONTRIBUTING.md#adding-new-components

**Link to tracking Issue:**
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/31412

**Testing:** Ran various `make ...` commands as listed in docs. Ignored
generated files and failures from unrelated components.

**Documentation:** New readme and metadata (to be filled in, see
tracking issue)

---------

Co-authored-by: Curtis Robert <crobert@splunk.com>

--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -86,6 +86,7 @@ body:
       - extension/encoding/otlpencoding
       - extension/encoding/textencoding
       - extension/encoding/zipkinencoding
+      - extension/googleclientauth
       - extension/headerssetter
       - extension/healthcheck
       - extension/httpforwarder
