--- a/exporter/awss3exporter/testdata/default.yaml
+++ b/exporter/awss3exporter/testdata/default.yaml
@@ -4,6 +4,7 @@ receivers:
 exporters:
   awss3:
     encoding: "foo/bar"
+    encoding_file_extension: "baz"
     s3uploader:
       s3_bucket: "foo"
       region: 'us-east-1'
