Add skeleton for new rabbitmq exporter component (#31800)
**Description:**
Sets-up the configuration format and common component boilerplate for
the rabbitmq exporter

Implementation will be in other pull requests

**Link to tracking Issue:**
[28891](https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/28891)

**Testing:** Standard initial unit tests

**Documentation:** Created README for the component

---------

Co-authored-by: Antoine Toulme <antoine@toulme.name>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -72,6 +72,7 @@ exporter/otelarrowexporter/                              @open-telemetry/collect
 exporter/prometheusexporter/                             @open-telemetry/collector-contrib-approvers @Aneurysm9
 exporter/prometheusremotewriteexporter/                  @open-telemetry/collector-contrib-approvers @Aneurysm9 @rapphil
 exporter/pulsarexporter/                                 @open-telemetry/collector-contrib-approvers @dmitryax @dao-jun
+exporter/rabbitmqexporter/                               @open-telemetry/collector-contrib-approvers @swar8080
 exporter/sapmexporter/                                   @open-telemetry/collector-contrib-approvers @dmitryax @atoulme
 exporter/sentryexporter/                                 @open-telemetry/collector-contrib-approvers @AbhiPrasad
 exporter/signalfxexporter/                               @open-telemetry/collector-contrib-approvers @dmitryax @crobert-1
