Promote @crobert-1 to Approver (#32009)
Curtis has been a very active contributor to the repository. The
maintainers propose to promote Curtis to Approver.

--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -15,6 +15,7 @@ assigneeGroups:
     - astencel-sumo
     - atoulme
     - bryan-aguilar
+    - crobert-1
     - dashpole
     - songy23
     - fatsheep9146
