[extension/encoding] Add avrologencodingextension (#31923)
**Description:** Add new component `avrologencodingextension` to be able
to transform AVRO messages into log record body.

As requested in #31077, this is a parallel request to support the same
functionality as reusable encoding extension.

**Link to tracking Issue:** #21067

**Testing:** Unit-testing as well as testing code within the
`kafakreceiver` receiver.

**Documentation:** Added README within the component.

--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -82,6 +82,7 @@ body:
       - extension/basicauth
       - extension/bearertokenauth
       - extension/encoding
+      - extension/encoding/avrologencoding
       - extension/encoding/jaegerencoding
       - extension/encoding/jsonlogencoding
       - extension/encoding/otlpencoding
