--- a/extension/sumologicextension/metadata.yaml
+++ b/extension/sumologicextension/metadata.yaml
@@ -5,7 +5,7 @@ status:
   class: extension
   stability:
     alpha: [extension]
-  distributions: [sumo]
+  distributions: []
   codeowners:
     active: [astencel-sumo, sumo-drosiek, swiatekm-sumo]
 
