--- a/connector/spanmetricsconnector/metadata.yaml
+++ b/connector/spanmetricsconnector/metadata.yaml
@@ -7,7 +7,7 @@ status:
     alpha: [traces_to_metrics]
   distributions: [contrib]
   codeowners:
-    active: [portertech]
+    active: [portertech, Frapschen]
     emeritus: [albertteoh]
     seeking_new: true
 
