[connector/exceptions] change stability to alpha (#31820)
**Description:** Promote this component to alpha and enable it in
contrib.

---------

Co-authored-by: Tyler Helmuth <12352919+TylerHelmuth@users.noreply.github.com>

--- a/reports/distributions/contrib.yaml
+++ b/reports/distributions/contrib.yaml
@@ -5,6 +5,7 @@ components:
     connector:
         - count
         - datadog
+        - exceptions
         - grafanacloud
         - routing
         - servicegraph
